Implement git host keys
