# openapi.yaml
@@ -78,14 +78,7 @@ components:
         facts:
           $ref: '#/components/schemas/ClusterFacts'
         gitRepo:
-          type: string
-          description: Cluster configuration catalog Git repository, usually generated by the API
-          example: https://github.com/acmecorp/gitops-mycluster.git
-        sshDeployKey:
-          type: string
-          description: SSH public key / deploy key for clusterconfiguration catalog Git repository. This property is managed by Steward.
-          example: |
-            ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIDG9a5WwLuwcxMRydNqI4ofuzXucrBKpGOvPV9PO4guj
+          $ref: '#/components/schemas/GitRepo'
         tenant:
           type: string
           description: Id of the tenant this cluster belongs to
@@ -128,6 +121,25 @@ components:
           type: string
         inventory:
           type: object
+    GitRepo:
+      type: object
+      description: Cluster configuration catalog Git repository, usually generated by the API
+      properties:
+        url:
+          type: string
+          description: Full URL of the git repo
+          example: ssh://git@github.com/acmecorp/gitops-mycluster.git
+        deployKey:
+          type: string
+          description: SSH public key / deploy key for clusterconfiguration catalog Git repository. This property is managed by Steward.
+          example: |
+            ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIDG9a5WwLuwcxMRydNqI4ofuzXucrBKpGOvPV9PO4guj
+        hostKeys:
+          type: string
+          description: SSH known hosts of the git server (multiline possible for multiple keys)
+          example: |
+            gitlab.com ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIAfuCHKVTjquxvt6CM6tdG4SLp1Btn/nOeHHE5UOzRdf
+            gitlab.com ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBFSMqzJeV9rUzU4kWitGjeR4PWSa29SPqJ1fVkhtj3Hw9xjLVXVYrU9QlYWrOLXBpQ6KWjbjTDTdDkoohFzgbEY=
   responses:
     Default:
       description: A default response with a reason.
